Project

General

Profile

Actions

Bug #19625

closed

rgw_file: fix event expire check, don't expire directories being read

Added by Matt Benjamin about 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The event expire check is in general not correct, and in addition, the readdir event needs a mechanism to delay expiration when readdir cycles are in progress.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19662: jewel: rgw_file: fix event expire check, don't expire directories being readResolvedNathan CutlerActions
Copied to rgw - Backport #19663: kraken: rgw_file: fix event expire check, don't expire directories being readResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin about 7 years ago

  • Status changed from New to Pending Backport
Actions #2

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19662: jewel: rgw_file: fix event expire check, don't expire directories being read added
Actions #3

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19663: kraken: rgw_file: fix event expire check, don't expire directories being read added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF